--- a/app/src/main/res/layout/transaction_model.xml
+++ b/app/src/main/res/layout/transaction_model.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="1dp"
     card_view:cardElevation="3.20dp"
     card_view:cardUseCompatPadding="true">
