--- a/app/src/main/res/layout/transactions_general_data_layout.xml
+++ b/app/src/main/res/layout/transactions_general_data_layout.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+    android:paddingBottom="10dp"
+    android:paddingTop="10dp">
 
     <!--
     <android.support.v7.widget.RecyclerView
@@ -22,6 +23,7 @@
         android:layout_marginEnd="10dp"
         android:contentDescription="@string/property_image" />
 
+
     <LinearLayout
         android:id="@+id/infoSection_GeneralData"
         android:layout_width="match_parent"
@@ -34,9 +36,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:background="@color/colorAccent"
             android:text="@string/id_transaction"
             android:textColor="@color/white"
-            android:background="@color/colorAccent"
             android:textSize="18sp" />
 
         <TextView
@@ -77,18 +79,28 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
+            android:background="@color/colorAccent"
             android:text="@string/amount"
-            android:textColor="@color/white"
-            android:background="@color/colorAccent"/>
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/txtView_etatTransaction_GeneralData"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@id/txtView_amountAuthorisedNumeric_GeneralData"
+            android:layout_alignParentStart="true"
+            android:layout_below="@+id/txtView_amountAuthorisedNumeric_GeneralData"
             android:text="@string/transaction_status" />
 
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/img_getExtendedTransactionData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/pricingSection_GeneralData"
+        android:layout_marginEnd="15dp"
+        android:layout_marginTop="13dp"
+        app:srcCompat="@drawable/ic_info_black_24dp" />
 
 </RelativeLayout>
