--- a/app/src/main/res/layout/transactions_general_data_layout.xml
+++ b/app/src/main/res/layout/transactions_general_data_layout.xml
@@ -99,8 +99,17 @@
         android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_below="@+id/pricingSection_GeneralData"
-        android:layout_marginEnd="15dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="13dp"
         app:srcCompat="@drawable/ic_info_black_24dp" />
+
+    <ImageView
+        android:id="@+id/img_getTicket"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignTop="@+id/img_getExtendedTransactionData"
+        android:layout_marginStart="20dp"
+        app:srcCompat="@drawable/ic_card_membership_black_24dp" />
 
 </RelativeLayout>
