--- a/app/src/main/res/layout/fragment_user_management.xml
+++ b/app/src/main/res/layout/fragment_user_management.xml
@@ -2,21 +2,47 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragments.UserManagementFragment">
 
+  <!--
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
         android:alpha="0.3"
         android:src="@drawable/ic_menu_manage" />
+-->
+    <RelativeLayout
+        android:id="@+id/relative_layout_listUsersMerchanst"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:ignore="UselessParent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+     <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/editText_search_usersMerchants"
+            android:drawableStart="@drawable/ic_search_black_24dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:hint="@string/search_transactions_hint"
+            android:singleLine="true"
+            tools:ignore="RtlHardcoded" />
 
     <ListView
-        android:id="@+id/list"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:divider="@color/list_divider"
-        android:dividerHeight="1dp"
-        android:listSelector="@drawable/list_row_user_manage_selector" />
+        android:id="@+id/ListView_usersMerchants"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/editText_search_usersMerchants"
+        android:paddingTop="20dp"/>
+
+    </RelativeLayout>
 
 </FrameLayout>
