--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -34,7 +34,7 @@
                 android:inputType="textEmailAddress"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/prompt_hint_email"
+                android:hint="@string/username"
                 android:drawableStart="@drawable/ic_person_white_24dp"/>
         </android.support.design.widget.TextInputLayout>
 
