--- a/app/src/main/res/layout/fragment_user_management.xml
+++ b/app/src/main/res/layout/fragment_user_management.xml
@@ -25,9 +25,9 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
      <EditText
+            android:id="@+id/editText_search_usersMerchants"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText_search_usersMerchants"
             android:drawableStart="@drawable/ic_search_black_24dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
@@ -42,6 +42,30 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/editText_search_usersMerchants"
         android:paddingTop="20dp"/>
+
+      <android.support.constraint.ConstraintLayout
+          android:layout_width="match_parent"
+          android:layout_height="match_parent">
+
+          <android.support.design.widget.FloatingActionButton
+              android:id="@+id/fab_createUserMerchant"
+              android:layout_width="wrap_content"
+              android:layout_height="wrap_content"
+              android:layout_gravity="bottom|end"
+              android:layout_margin="@dimen/fab_margin"
+              android:layout_marginBottom="8dp"
+              android:layout_marginEnd="8dp"
+              android:layout_marginStart="8dp"
+              android:layout_marginTop="8dp"
+              app:layout_constraintBottom_toBottomOf="parent"
+              app:layout_constraintEnd_toEndOf="parent"
+              app:layout_constraintHorizontal_bias="0.972"
+              app:layout_constraintStart_toStartOf="parent"
+              app:layout_constraintTop_toTopOf="parent"
+              app:layout_constraintVertical_bias="0.883"
+              app:srcCompat="@drawable/ic_note_add_black_24dp" />
+
+      </android.support.constraint.ConstraintLayout>
 
     </RelativeLayout>
 
