--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -63,6 +63,15 @@
             android:layout_marginTop="16dp"
             android:text="@string/prompt_btn_login" />
 
+        <Button
+            android:id="@+id/buttonForgotPassword"
+            style="@style/DefaultButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            android:text="@string/forgot_password" />
+
         <!--
         <TextView
             android:id="@+id/textViewCreateAccount"
