--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,6 +33,24 @@
         <item name="android:minWidth">200dp</item>
     </style>
 
+    <style name="MediumButton" parent="@android:style/Widget.Button">
+        <item name="android:minHeight">40dp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:background">@drawable/buttons_background_login_mss</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:minWidth">150dp</item>
+    </style>
+
+    <style name="SmallButton" parent="@android:style/Widget.Button">
+        <item name="android:minHeight">40dp</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:background">@drawable/buttons_background_login_mss</item>
+        <item name="android:padding">5dp</item>
+        <item name="android:minWidth">100dp</item>
+    </style>
+
     <!-- Start of : Another Themes from Another tuto to do the waiting process -->
 
     <style name="AppTheme.Dark.Dialog" parent="Theme.AppCompat.Dialog">
