--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -65,6 +65,7 @@
 
     <!-- Other Colors by me-->
     <color name="green_foncee">#4CAF50</color>
+    <color name="teal">#1DE9B6</color>
     <color name="green_">#00E676</color>
     <color name="green">#7FFF00</color>
     <color name="orange">#FFA500</color>
