--- a/app/src/main/res/layout/fragment_settings_scroll_view.xml
+++ b/app/src/main/res/layout/fragment_settings_scroll_view.xml
@@ -24,10 +24,10 @@
             android:layout_marginTop="16dp"
             android:layout_marginStart="5dp"
             android:text="@string/change_password_settings"
-            android:textSize="20sp"
-            android:textColor="@color/blue_grey"
+            android:textSize="14sp"
+            android:textColor="@color/teal"
             android:textStyle="bold"
-            android:drawableRight="@drawable/ic_menu_manage"
+            android:drawableEnd="@drawable/ic_menu_manage"
             android:drawablePadding="8dp" />
 
 
@@ -123,6 +123,7 @@
 
         </android.support.constraint.ConstraintLayout>
 
+        <!--
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -170,6 +171,7 @@
             android:background="@color/iron"
             android:textAlignment="viewStart"
             android:textStyle="bold"/>
+       !-->
 
     </LinearLayout>
  </ScrollView>
