--- a/app/src/main/res/layout/fragment_notifications.xml
+++ b/app/src/main/res/layout/fragment_notifications.xml
@@ -1,14 +1,69 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.NotificationsFragment">
+    tools:context=".Fragments.NotificationsFragment"
+    android:id="@+id/frag_notification">
 
+    <!--
     <ImageView
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_gravity="center"
         android:alpha="0.3"
-        android:src="@drawable/ic_notifications_black_24dp_v21" />
+        app:srcCompat="@drawable/ic_notifications_black_24dp_v21"
+        android:contentDescription="@string/"/>
+    -->
+
+    <RelativeLayout
+        android:id="@+id/relative_layout_generalTransactions"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:ignore="UselessParent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <EditText
+            android:id="@+id/editText_search_rejectedTransactionsNotif"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_search_black_24dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:hint="@string/search_transactions_hint"
+            android:singleLine="true"
+            tools:ignore="RtlHardcoded" />
+
+        <TextView
+            android:id="@+id/txtView_totalSizeOfNotications"
+            android:layout_below="@+id/editText_search_rejectedTransactionsNotif"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="18sp"
+            android:textColor="@color/orange"
+            android:textColorHighlight="@color/black"
+            android:textStyle="bold"/>
+
+        <!-- android:hint="@string/list_view_size_of_total_result" -->
+
+        <ListView
+            android:id="@+id/ListView_rejectedTransactionsNotif"
+            android:layout_below="@+id/txtView_totalSizeOfNotications"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="20dp"
+            android:divider="@color/red"
+            android:dividerHeight="1dp"
+            android:listSelector="@color/five"
+            android:longClickable="true"/>
+
+    </RelativeLayout>
+
 
 </FrameLayout>
