--- a/app/src/main/res/layout/fragment_transactions.xml
+++ b/app/src/main/res/layout/fragment_transactions.xml
@@ -33,9 +33,9 @@
     </android.support.v7.widget.SearchView>
 -->
         <EditText
+            android:id="@+id/editText_search_transactions"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/editText_search_transactions"
             android:drawableStart="@drawable/ic_search_black_24dp"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
@@ -44,12 +44,28 @@
             android:singleLine="true"
             tools:ignore="RtlHardcoded" />
 
-     <ListView
+        <TextView
+            android:id="@+id/txtView_totalSizeOfTransactions"
+            android:layout_below="@+id/editText_search_transactions"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:textSize="18sp"
+            android:textColor="@color/orange"
+            android:textColorHighlight="@color/black"
+            android:textStyle="bold"/>
+
+        <!-- android:hint="@string/list_view_size_of_total_result" -->
+
+        <ListView
+           android:id="@+id/ListView_transactionsGeneralData"
+           android:layout_below="@+id/txtView_totalSizeOfTransactions"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
-           android:id="@+id/ListView_transactionsGeneralData"
-           android:layout_below="@+id/editText_search_transactions"
-           android:paddingTop="20dp"/>
+           android:paddingTop="20dp"
+           android:divider="@color/red"
+           android:dividerHeight="1dp"
+           android:listSelector="@color/five"/>
 
     </RelativeLayout>
 
