--- a/app/src/main/res/layout/nav_header_home_admin_marchant.xml
+++ b/app/src/main/res/layout/nav_header_home_admin_marchant.xml
@@ -17,7 +17,8 @@
         android:layout_width="@dimen/profile_width"
         android:layout_height="@dimen/profile_height"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@mipmap/ic_launcher_round"
+        android:contentDescription="@string/todo" />
 
     <TextView
         android:id="@+id/textViewUsrName"
