--- a/app/src/main/res/layout/transaction_extended_view.xml
+++ b/app/src/main/res/layout/transaction_extended_view.xml
@@ -41,11 +41,12 @@
         android:id="@+id/txtView_Transactiontype_ExtendedTrnsData"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/transaction_type"
-        android:layout_marginTop="20dp"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/txtView_TimeSystemTransaction_ExtendedTrnsData"
+        android:layout_marginTop="23dp"
         android:drawableStart="@drawable/ic_euro_symbol_black_24dp"
-        android:textStyle="bold"/>
+        android:text="@string/transaction_type"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/txtView_ResponseCode_ExtendedTrnsData"
