--- a/app/src/main/res/layout/transactions_general_data_layout.xml
+++ b/app/src/main/res/layout/transactions_general_data_layout.xml
@@ -130,7 +130,8 @@
         android:layout_below="@+id/bankingSection_GeneralData"
         android:layout_marginEnd="20dp"
         android:layout_marginTop="13dp"
-        app:srcCompat="@drawable/ic_info_black_24dp" />
+        app:srcCompat="@drawable/ic_info_black_24dp"
+        android:contentDescription="@string/todo" />
 
     <ImageView
         android:id="@+id/img_getTicket"
@@ -138,7 +139,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignTop="@+id/img_getExtendedTransactionData"
-        android:layout_marginStart="20dp"
-        app:srcCompat="@drawable/ic_card_membership_black_24dp" />
+        android:layout_marginStart="22dp"
+        app:srcCompat="@drawable/ic_card_membership_black_24dp"
+        android:contentDescription="@string/todo" />
 
 </RelativeLayout>
