--- a/app/src/main/res/layout/transactions_status_charts_choices.xml
+++ b/app/src/main/res/layout/transactions_status_charts_choices.xml
@@ -19,7 +19,8 @@
         app:layout_constraintHorizontal_bias="0.137"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.084">
+        app:layout_constraintVertical_bias="0.084"
+        tools:ignore="UselessParent">
 
         <RadioButton
             android:id="@+id/radioPieChartTrnsStat"
